scripts/nullaway/wpi/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8.txt
../wpi/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/utility/Point.java:33: error: [NullAway] dereferenced expression topleft is @Nullable
        return topleft.x <= point.x && point.x <= bottomright.x && topleft.y <= point.y && point.y <= bottomright.y;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/utility/Point.java:33: error: [NullAway] dereferenced expression bottomright is @Nullable
        return topleft.x <= point.x && point.x <= bottomright.x && topleft.y <= point.y && point.y <= bottomright.y;
                                                             ^
    (see http://t.uber.com/nullaway )
../wpi/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/movestrategies/ShortestPathMoveStrategy.java:46: error: [NullAway] dereferenced expression currentInfo is @Nullable
                if (neighbourInfo == null || neighbourInfo.pathLength > currentInfo.pathLength + 1) {
                                                                                   ^
    (see http://t.uber.com/nullaway )
../wpi/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/movestrategies/ShortestPathMoveStrategy.java:47: error: [NullAway] dereferenced expression currentInfo is @Nullable
                    nodesInfo.put(neighbour, new BFSNodeInfo(current, currentInfo.pathLength + 1));
                                                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/movestrategies/ShortestPathMoveStrategy.java:64: error: [NullAway] dereferenced expression currentInfo is @Nullable
        while (!currentInfo.predecessor.equals(current)) {
                           ^
    (see http://t.uber.com/nullaway )
../wpi/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/gameprinters/HexGamePrinter.java:23: error: [NullAway] dereferenced expression gameField is @Nullable
        Iterator<Point> fieldIter = gameField.getIterator();
                                             ^
    (see http://t.uber.com/nullaway )
../wpi/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/gameprinters/RectGamePrinter.java:23: error: [NullAway] dereferenced expression gameField is @Nullable
        Iterator<Point> fieldIter = gameField.getIterator();
                                             ^
    (see http://t.uber.com/nullaway )
7 errors
